--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -12,7 +12,7 @@
     <!--<nav class="navbar navbar-expand-lg bg-light">-->
     <nav class="navbar navbar-expand-md navbar-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Navbar</a>
+            <a class="navbar-brand" href="{% url 'main-home' %}">Navbar</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -27,17 +27,14 @@
                         <a class="nav-link" href="#">Link</a>
                     </li>-->
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button"
-                            data-bs-toggle="dropdown" aria-expanded="false">
-                            School Year
-                        </a>
+                        <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">School Year</a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">2020</a></li>
-                            <li><a class="dropdown-item" href="#">2021</a></li>
+                            <li><a class="dropdown-item" href="{% url 'main-classes' '2021-2022' %}">2021-2022</a></li>
+                            <li><a class="dropdown-item" href="{% url 'main-classes' '2022-2023' %}">2022-2023</a></li>
+                            <li><a class="dropdown-item" href="{% url 'main-classes' '2023-2024' %}">2023-2024</a></li>
                             <!--<li>
                                 <hr class="dropdown-divider">
                             </li>-->
-                            <li><a class="dropdown-item" href="#">2022</a></li>
                         </ul>
                     </li>
                 </ul>
