--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -16,7 +16,7 @@
     <!--<nav class="navbar navbar-expand-lg bg-light">-->
     <nav class="navbar navbar-expand-md navbar-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="{% url 'main-home' %}">AMS Computer Science</a>
+            <a class="navbar-brand" href="{% url 'main-home' %}"><b>AMS Computer Science</b></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
