--- a/main/templates/main/classes.html
+++ b/main/templates/main/classes.html
@@ -5,7 +5,7 @@
 </div>
 <div class="classes-div">
     {% for class in classes %}
-        <h1><a href="{% url 'main-class-page' class.school_year class.title class.pk %}">{{ class.title}}</a></h1>
+        <h1><a href="{% url 'classroom-classroom-main' class.school_year class.title class.pk %}">{{ class.title}}</a></h1>
     {% endfor %}    
 </div>
 {% endblock content %}
