--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -24,6 +24,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    {% if user.is_authenticated %}
                     <!--<li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                     </li>
@@ -41,7 +42,17 @@
                             </li>-->
                         </ul>
                     </li>
+                    {% endif %}
                 </ul>
+            </div>
+            <div class='navbar-nav'>
+                {% if user.is_authenticated %}
+                <a class="nav-link active" aria-current="page" href="#">{{ user.username }}</a>
+                <a class="nav-link active" aria-current="page" href="{% url 'users-logout' %}">Logout</a>
+                {% else %}
+                <a class="nav-link active" aria-current="page" href="{% url 'users-login' %}">Login</a>
+                <a class="nav-link active" aria-current="page" href="{% url 'users-register' %}">Register</a>
+                {% endif %}
             </div>
         </div>
     </nav>
