--- a/users/templates/users/logout.html
+++ b/users/templates/users/logout.html
@@ -1,6 +1,6 @@
 {% extends 'main/base.html' %}
 {% block content %}
-<div class='goodbye-title-div'>
+<div class='page-title'>
     <h1>See you later!</h1>
 </div>
 {% endblock content %}
