moved ClassListView to classroom app and remapped urls

--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -34,9 +34,9 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">School Year</a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="{% url 'main-classes' '2021-2022' %}">2021-2022</a></li>
-                            <li><a class="dropdown-item" href="{% url 'main-classes' '2022-2023' %}">2022-2023</a></li>
-                            <li><a class="dropdown-item" href="{% url 'main-classes' '2023-2024' %}">2023-2024</a></li>
+                            <li><a class="dropdown-item" href="{% url 'classroom-classes' '2021-2022' %}">2021-2022</a></li>
+                            <li><a class="dropdown-item" href="{% url 'classroom-classes' '2022-2023' %}">2022-2023</a></li>
+                            <li><a class="dropdown-item" href="{% url 'classroom-classes' '2023-2024' %}">2023-2024</a></li>
                             <!--<li>
                                 <hr class="dropdown-divider">
                             </li>-->
