--- a/main/static/main/main.css
+++ b/main/static/main/main.css
@@ -1,7 +1,6 @@
 /*~~~~~CSS for all pages~~~~~*/
 body{
-    /*background-color:#fafafa;*/
-    background-color:#FAF9F6;
+    background-color:#f5f5f5;
 }
 
 .navbar{
