--- a/main/static/main/main.css
+++ b/main/static/main/main.css
@@ -1,50 +1,57 @@
-/*~~~~~CSS for all pages~~~~~*/
+/*~~~~~CSS for body, navbar, page-content, and page-title divs~~~~~*/
 body{
-    background-color:#f5f5f5;
+  background-color:#f5f5f5;
 }
 
 .navbar{
-    /*background-color: rgb(53, 112, 168);*/
-    background-color:white;
-    border-bottom: 1px solid lightgrey;
-    padding-left:10px;
-    padding-right:10px;
-    margin-bottom:20px;
+  /*background-color: rgb(53, 112, 168);*/
+  background-color:white;
+  border-bottom: 1px solid lightgrey;
+  padding-left:10px;
+  padding-right:10px;
+  margin-bottom:20px;
 }
 
 .page-content{
-    margin-left:20px;
-    margin-right:20px;
+  margin-left:20px;
+  margin-right:20px;
 }
 
 .page-title{
-    text-align:center;
+  text-align:center;
 }
 
-/*~~~~~CSS for register,login, and profile forms~~~~~*/
-.register-login-profile-form{
-    width:500px;
-  }
+/*~~~~~CSS for login and register forms~~~~~*/
+.login-register-container1{
+  display:flex;
+  flex-direction:column;
+  column-gap:10px;
+  justify-content:center;
+}
+
+.login-register-container2{
+  display:flex;
+  justify-content:center;
+  align-items:center;
+}
+
+.login-register-container3{
+  display:flex;
+  justify-content:center;
+}
+
+.login-register-card{
+  width: 600px;
+}
+
+/*
+.login-register-card-body{
   
-  .log-reg-container1>{
-    display:flex;
-    flex-direction:column;
-    column-gap:10px;
-    justify-content:center;
-  }
-  
-  .alert{
-    text-align:center;
-    width:600px;
-  }
-  
-  .log-reg-container2{
-    display:flex;
-    justify-content:center;
-    align-items:center;
-  }
-  
-  .log-reg-container3{
-    display:flex;
-    justify-content:center;
-  }
+}
+*/
+
+/*~~~~~CSS for alerts~~~~~*/
+.alert{
+  text-align:center;
+  width:600px;
+}
