--- a/main/static/main/main.css
+++ b/main/static/main/main.css
@@ -1,4 +1,4 @@
-/*~~~~~CSS for body, navbar, page-content, and page-title divs~~~~~*/
+/*~~~~~body, navbar, page-content, and page-title divs~~~~~*/
 body{
   background-color:#f5f5f5;
 }
@@ -21,7 +21,7 @@ body{
   text-align:center;
 }
 
-/*~~~~~CSS for login and register forms~~~~~*/
+/*~~~~~login and register forms~~~~~*/
 .login-register-container1{
   display:flex;
   flex-direction:column;
@@ -50,7 +50,7 @@ body{
 }
 */
 
-/*~~~~~CSS for alerts~~~~~*/
+/*~~~~~alerts~~~~~*/
 .alert{
   text-align:center;
   width:600px;
