updated profile page html

--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -8,26 +8,25 @@
         </div>
     {% endfor %}
 {% endif %}
-<div class="card project-card" style="width: 600px;">
-    <div class="card-body project-card-body">
+<div class="card profile-card">
+    <div class="card-body profile-card-body">
         <form method='POST'>
             <fieldset class='form-group'>
                 <h1>{{ user.first_name }} {{ user.last_name }}</h1>
-                <h4>{{ user.username }}</h4>
-                <p>Grade {{ user.profile.grade }} | {{ user.profile.stars }} stars</p>
+                <h3>{{ user.username }}</h3>
+                <h5>{{ user.profile.grade }}th grade | {{ num_user_questions }} questions | {{ num_user_solutions }} solutions</h5>
                 <br>
-                <fieldset class='form-group'>
-                    <legend class='border-bottom mb-4'>My Classes</legend>
-                    {% for class in  classes %}
-                        <p>{{ class.title }}</p>
-                    {% endfor %}
-                    <br>
-                </fieldset>
+                <legend class='border-bottom mb-4'>My Classes</legend>
+                {% for class in classes %}
+                    <p><a href="{% url 'classroom-classroom-main' class.title class.pk %}">{{ class.title}}</a></p>
+                {% endfor %} 
+                <br>
                 <legend class='border-bottom mb-4'>Personal information</legend>
                 {% csrf_token %}
                 {{ u_form|crispy }}
                 {{ p_form|crispy }}
             </fieldset>
+            <br>
             <br>
             <div class='form-group'>
                 <button class='btn btn-outline-success' type='submit'>Update</button>
