--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -33,7 +33,7 @@
                         </li>-->
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">School Year</a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
                                 <li><a class="dropdown-item" href="{% url 'classroom-classes' '2021-2022' %}">2021-2022</a></li>
                                 <li><a class="dropdown-item" href="{% url 'classroom-classes' '2022-2023' %}">2022-2023</a></li>
                                 <li><a class="dropdown-item" href="{% url 'classroom-classes' '2023-2024' %}">2023-2024</a></li>
@@ -47,8 +47,23 @@
             </div>
             <div class='navbar-nav'>
                 {% if user.is_authenticated %}
-                    <a class="nav-link active" aria-current="page" href="{% url 'users-profile' %}">{{ user.username }}</a>
-                    <a class="nav-link active" aria-current="page" href="{% url 'users-logout' %}">Logout</a>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">{{ user.username }}</a>
+                        <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" href="#">Classes</a></li>
+                            <li><a class="dropdown-item" href="#">Projects</a></li>
+                            <li><a class="dropdown-item" href="#">Activity</a></li>
+                            <li><a class="dropdown-item" href="#">Notifications</a></li>
+                            <li><a class="dropdown-item" href="{% url 'users-profile' %}">Profile</a></li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
+                            <li><a class="dropdown-item" href="{% url 'users-logout' %}">Logout</a></li>
+                            <!--<li>
+                                <hr class="dropdown-divider">
+                            </li>-->
+                        </ul>
+                    </li>
                 {% else %}
                     <a class="nav-link active" aria-current="page" href="{% url 'users-login' %}">Login</a>
                     <a class="nav-link active" aria-current="page" href="{% url 'users-register' %}">Register</a>
