--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -25,23 +25,12 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     {% if user.is_authenticated %}
-                        <!--<li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
-                        </li>
                         <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="{% url 'main-school-years' %}">Find a Class</a>
+                        </li>
+                        <!--<li class="nav-item">
                             <a class="nav-link" href="#">Link</a>
                         </li>-->
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">School Year</a>
-                            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="{% url 'classroom-classes' '2021-2022' %}">2021-2022</a></li>
-                                <li><a class="dropdown-item" href="{% url 'classroom-classes' '2022-2023' %}">2022-2023</a></li>
-                                <li><a class="dropdown-item" href="{% url 'classroom-classes' '2023-2024' %}">2023-2024</a></li>
-                                <!--<li>
-                                    <hr class="dropdown-divider">
-                                </li>-->
-                            </ul>
-                        </li>
                     {% endif %}
                 </ul>
             </div>
