--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -26,7 +26,7 @@
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     {% if user.is_authenticated %}
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="{% url 'main-school-years' %}">Find a Class</a>
+                            <a class="nav-link active" aria-current="page" href="{% url 'main-school-years' %}">Classes</a>
                         </li>
                         <!--<li class="nav-item">
                             <a class="nav-link" href="#">Link</a>
