--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -26,7 +26,7 @@
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     {% if user.is_authenticated %}
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="{% url 'main-school-years' %}">Classes</a>
+                            <a class="nav-link active" aria-current="page" href="{% url 'main-school-years' %}">Find classes</a>
                         </li>
                         <!--<li class="nav-item">
                             <a class="nav-link" href="#">Link</a>
@@ -39,11 +39,11 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">{{ user.username }}</a>
                         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">Classes</a></li>
-                            <li><a class="dropdown-item" href="#">Projects</a></li>
-                            <li><a class="dropdown-item" href="#">Activity</a></li>
-                            <li><a class="dropdown-item" href="#">Notifications</a></li>
-                            <li><a class="dropdown-item" href="{% url 'users-profile' %}">Profile</a></li>
+                            <li><a class="dropdown-item" href="#">My classes</a></li>
+                            <li><a class="dropdown-item" href="#">My projects</a></li>
+                            <li><a class="dropdown-item" href="#">My activity</a></li>
+                            <li><a class="dropdown-item" href="{% url 'users-myprofile' %}">My profile</a></li>
+                            <li><a class="dropdown-item" href="#">My notifications</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
