--- a/main/templates/main/schoolyears.html
+++ b/main/templates/main/schoolyears.html
@@ -1,7 +1,7 @@
 {% extends 'main/base.html' %}
 {% block content %}
 <div class='page-title'>
-    <h1>Classes by School Year</h1>
+    <h1>Find classes by school year</h1>
 </div>
 <div class="classes-div">
     {% for year in schoolyears %}
