--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -40,7 +40,7 @@
                         <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">{{ user.username }}</a>
                         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item" href="{% url 'users-myclasses' %}">My classes</a></li>
-                            <li><a class="dropdown-item" href="#">My projects</a></li>
+                            <li><a class="dropdown-item" href="{% url 'users-myprojects' %}">My projects</a></li>
                             <li><a class="dropdown-item" href="#">My activity</a></li>
                             <li><a class="dropdown-item" href="{% url 'users-myprofile' %}">My profile</a></li>
                             <li><a class="dropdown-item" href="#">My notifications</a></li>
