--- a/users/templates/users/myprojects.html
+++ b/users/templates/users/myprojects.html
@@ -6,6 +6,8 @@
 <div class="classes-div">
     {% for project in projects %}
         <h1>{{ project.title}}</h1>
+        <p>{{ project.blurb }}</p>
+        <br>
     {% endfor %}    
 </div>
 {% endblock content %}
