--- a/users/templates/users/myprojects.html
+++ b/users/templates/users/myprojects.html
@@ -5,9 +5,10 @@
 </div>
 <div class="classes-div">
     {% for project in projects %}
-        <h1>{{ project.title}}</h1>
+        <h1><a href="{% url 'users-projectdetails' project.pk %}">{{ project.title}}</a></h1>
         <p>{{ project.blurb }}</p>
         <br>
     {% endfor %}    
 </div>
+<a href='{% url "users-createproject" %}'>Create new project</a>
 {% endblock content %}
