--- a/users/templates/users/projectdetails.html
+++ b/users/templates/users/projectdetails.html
@@ -13,5 +13,7 @@
         <br>
     </div>
 </div>
+<a href="{% url 'users-deleteproject' project.pk %}">Delete project</a>
+<br>
 <a href="{% url 'users-myprojects' %}">Back to my projects</a>
 {% endblock content %}
