updated "back to" urls

--- a/users/templates/users/projectdetails.html
+++ b/users/templates/users/projectdetails.html
@@ -15,5 +15,5 @@
 </div>
 <a href="{% url 'users-deleteproject' project.pk %}">Delete project</a>
 <br>
-<a href="{% url 'users-myprojects' %}">Back to my projects</a>
+<a href="{% url 'users-myprojects' %}">Back to My projects</a>
 {% endblock content %}
