--- a/main/templates/main/classes.html
+++ b/main/templates/main/classes.html
@@ -8,4 +8,5 @@
         <h1><a href="{% url 'classroom-classroom-main' class.title class.pk %}">{{ class.title}}</a></h1>
     {% endfor %}    
 </div>
+<a href='{% url "main-findclasses" %}'>Back to Find classes by school year</a>
 {% endblock content %}
