updated all template names to include apps name as a prefix

--- a/users/templates/users/users-register.html
+++ b/users/templates/users/users-register.html
@@ -1,4 +1,4 @@
-{% extends 'main/base.html' %}
+{% extends 'main/main-base.html' %}
 {% load crispy_forms_tags %}
 {% block content %}
 <div class='login-register-container1'>
@@ -15,23 +15,19 @@
         <div class="card login-register-card">
             <div class="card-body login-register-card-body">
                 <form method='POST'>
-                    {% csrf_token %}
                     <fieldset class='form-group'>
-                        <legend class='border-bottom mb-4'>Log in</legend>
+                        <legend class='border-bottom mb-4'>Join Today</legend>
+                        {% csrf_token %}
                         {{ form|crispy }}
                     </fieldset>
                     <br>
                     <div class='form-group'>
-                        <button class='btn btn-outline-success' type='submit'>Log in</button>
-                        
+                        <button class='btn btn-outline-success' type='submit'>Continue</button>
                     </div>
                 </form>
                 <br>
                 <div>
-                    <small class='text-muted'>Need an account? <a class='ml-2' href="{% url 'users-register' %}">Sign up now</a></small>
-                    <br>
-                    <!--<small class='text-muted'>Forgot password? <a href= url 'password_reset' >Send reset instructions</a></small>-->
-                    
+                    <small class='text-muted'>Already have an account? <a class='ml-2' href="{% url 'users-login' %}">Sign in</a></small>
                 </div>
             </div>
         </div>
