--- a/main/templates/main/main-classbyschoolyear.html
+++ b/main/templates/main/main-classbyschoolyear.html
@@ -1,4 +1,4 @@
-{% extends 'main/base.html' %}
+{% extends 'main/main-base.html' %}
 {% block content %}
 <div class='page-title'>
     <h1>Find classes by school year</h1>
