--- a/users/templates/users/users-myprofile.html
+++ b/users/templates/users/users-myprofile.html
@@ -1,4 +1,4 @@
-{% extends "main/base.html" %}
+{% extends 'main/main-base.html' %}
 {% load crispy_forms_tags %}
 {% block content %}
 {% if messages %}
