--- a/users/templates/users/users-myprojects.html
+++ b/users/templates/users/users-myprojects.html
@@ -1,4 +1,4 @@
-{% extends 'main/base.html' %}
+{% extends 'main/main-base.html' %}
 {% block content %}
 <div class='page-title'>
     <h1>My projects</h1>
