--- a/users/templates/users/users-project_form.html
+++ b/users/templates/users/users-project_form.html
@@ -1,4 +1,4 @@
-{% extends 'main/base.html' %}
+{% extends 'main/main-base.html' %}
 {% load crispy_forms_tags %}
 {% block content %}
 <div class="card project-card" style="width: 800px;">
