added views, urls, and templates to view student details from classroom "meet the team" page

--- a/classroom/templates/classroom/classroom-profiles.html
+++ b/classroom/templates/classroom/classroom-profiles.html
@@ -1,13 +1,12 @@
 {% extends 'main/main-base.html' %}
 {% block content %}
 <div class='page-title'>
-    <h1>Meet the tean</h1>
+    <h1>Meet the team</h1>
 </div>
 <div class="student-profiles-div">
     {% for profile in profiles %}
         <!--<h1><a href= url 'classroom-classroom-main' class.title class.pk %}">{{ class.title}}</a></h1>-->
-        <h1>{{ profile.user.first_name }} {{ profile.user.last_name }}</h1>
-        <p>{{ profile.grade }}th grade</p>
+        <h1><a href="{% url 'classroom-studentdetails' profile.pk %}">{{ profile.user.first_name }} {{ profile.user.last_name }}</a></h1>
     {% endfor %}    
 </div>
 {% endblock content %}
