added views, urls, and templates to view student projects from student profile page in classroom app

--- a/classroom/templates/classroom/classroom-projectdetails.html
+++ b/classroom/templates/classroom/classroom-projectdetails.html
@@ -19,5 +19,5 @@
     <a href="{% url 'users-deleteproject' project.pk %}">Delete project</a>
 {% endif %}
 <br>
-<a href="{% url 'users-myprojects' %}">Back to My projects</a>
+<a href="#">Back to student profile</a>
 {% endblock content %}
