added conditional statement to check user before allowing to delete video

--- a/users/templates/users/users-projectdetails.html
+++ b/users/templates/users/users-projectdetails.html
@@ -19,7 +19,9 @@
                 <div class='video-div'>
                     {% video project_video.video '300x300' %}
                     <br>
-                    <small><a href="#">Delete video</a></small>
+                    {% if user == project.user %}
+                        <small><a href="#">Delete video</a></small>
+                    {% endif %}
                 </div>
             {% endfor %}
         </fieldset>
