--- a/main/templates/main/main-base.html
+++ b/main/templates/main/main-base.html
@@ -39,10 +39,10 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">{{ user.username }}</a>
                         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="{% url 'users-myclasses' %}">My classes</a></li>
-                            <li><a class="dropdown-item" href="{% url 'users-myprojects' %}">My projects</a></li>
+                            <li><a class="dropdown-item" href="{% url 'users-my-classes' %}">My classes</a></li>
+                            <li><a class="dropdown-item" href="{% url 'users-my-projects' %}">My projects</a></li>
                             <li><a class="dropdown-item" href="#">My activity</a></li>
-                            <li><a class="dropdown-item" href="{% url 'users-myprofile' %}">My profile</a></li>
+                            <li><a class="dropdown-item" href="{% url 'users-my-profile' %}">My profile</a></li>
                             <li><a class="dropdown-item" href="#">My notifications</a></li>
                             <li>
                                 <hr class="dropdown-divider">
