--- a/users/templates/users/users-my-projects.html
+++ b/users/templates/users/users-my-projects.html
@@ -5,10 +5,10 @@
 </div>
 <div class="classes-div">
     {% for project in projects %}
-        <h1><a href="{% url 'users-projectdetails' project.pk %}">{{ project.title}}</a></h1>
+        <h1><a href="{% url 'users-project-details' project.pk %}">{{ project.title}}</a></h1>
         <p>{{ project.blurb }}</p>
         <br>
     {% endfor %}    
 </div>
-<a href='{% url "users-createproject" %}'>Create new project</a>
+<a href='{% url "users-create-project" %}'>Create new project</a>
 {% endblock content %}
