--- a/users/templates/users/users-project_video_confirm_delete.html
+++ b/users/templates/users/users-project_video_confirm_delete.html
@@ -9,7 +9,7 @@
             </fieldset>
             <br>
             <div class='form-group'>
-                <a class="btn btn-outline-dark btn-sm" href="{% url 'users-projectdetails' object.pk %}">Cancel</a>
+                <a class="btn btn-outline-dark btn-sm" href="{% url 'users-project-details' object.pk %}">Cancel</a>
                 <button class="btn btn-outline-danger btn-sm" type='submit'>Yes, Delete</button>
             </div>
         </form>
