--- a/classroom/templates/classroom/classroom-main.html
+++ b/classroom/templates/classroom/classroom-main.html
@@ -5,4 +5,5 @@
     <p>join code: {{ classroom.join_code }}</p>
 </div>
 <h1><a href="{% url 'classroom-classroom-profiles' classroom.title classroom.pk %}">Meet the team</a></h1>
+<h1><a href="#">Class projects</a></h1>
 {% endblock content %}
