--- a/users/templates/users/users-add-link.html
+++ b/users/templates/users/users-add-link.html
@@ -7,7 +7,7 @@
         <form method="POST" enctype='multipart/form-data'>
             {% csrf_token %}
             <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Add project video</legend>
+                <legend class="border-bottom mb-4">Add project link</legend>
                 {{ form|crispy }}
             </fieldset>
             <br>
