--- a/users/templates/users/users-project_form.html
+++ b/users/templates/users/users-project_form.html
@@ -1,7 +1,7 @@
 {% extends 'main/main-base.html' %}
 {% load crispy_forms_tags %}
 {% block content %}
-<div class="card project-card" style="width: 800px;">
+<div class="card project-card">
     <div class="card-body project-card-body">
         <form method="POST">
             {% csrf_token %}
