--- a/users/templates/users/users-my-profile.html
+++ b/users/templates/users/users-my-profile.html
@@ -8,7 +8,7 @@
         </div>
     {% endfor %}
 {% endif %}
-<div class="card profile-card">
+<div class="card project-card">
     <div class="card-body profile-card-body">
         <h1>{{ user.first_name }} {{ user.last_name }}</h1>
         <h3>{{ user.username }}</h3>
