--- a/classroom/templates/classroom/classroom-project-details.html
+++ b/classroom/templates/classroom/classroom-project-details.html
@@ -36,8 +36,8 @@
 {% for comment in comments %}
     <b>{{ comment.author.first_name }} {{ comment.author.last_name }}</b>
     <p>{{ comment.content }}</p> 
-    <a href="{% url 'classroom-update-comment' comment.pk %}">Edit</a>
-    <a href="{% url 'classroom-delete-comment' comment.pk %}">Delete</a>
+    <small><a href="{% url 'classroom-update-comment' comment.pk %}">Edit</a></small>
+    <small><a href="{% url 'classroom-delete-comment' comment.pk %}">Delete</a></small>
     <br>
 {% endfor %}
 <!--<a href= url 'add-comment' project.pk >Add Comment</a>-->
