--- a/classroom/templates/classroom/classroom-project-details.html
+++ b/classroom/templates/classroom/classroom-project-details.html
@@ -27,19 +27,19 @@
 <a href="{% url 'classroom-student-details' profile.pk %}">Back to student profile</a>
 
 {% if not comments %}
-<br><br>
-<h3>No comments yet...</h3>
+    <br><br>
+    <h3 class="border-bottom mb-4">No comments yet...</h3>
 <!--<a href=url 'add-comment' project.pk >Add Comment</a>-->
 {% else %}
-<br><br>
-<h3>Comments</h3>
-{% for comment in comments %}
-    <b>{{ comment.author.first_name }} {{ comment.author.last_name }}</b>
-    <p>{{ comment.content }}</p> 
-    <small><a href="{% url 'classroom-update-comment' comment.pk %}">Edit</a></small>
-    <small><a href="{% url 'classroom-delete-comment' comment.pk %}">Delete</a></small>
-    <br>
-{% endfor %}
+    <br><br>
+    <h3 class="border-bottom mb-4">Comments</h3>
+    {% for comment in comments %}
+        <b>{{ comment.author.first_name }} {{ comment.author.last_name }}</b>
+        <p>{{ comment.content }}</p> 
+        <small><a href="{% url 'classroom-update-comment' comment.pk %}">Edit</a></small>
+        <small><a href="{% url 'classroom-delete-comment' comment.pk %}">Delete</a></small>
+        <br>
+    {% endfor %}
 <!--<a href= url 'add-comment' project.pk >Add Comment</a>-->
 {% endif %}
 <br>
