--- a/classroom/templates/classroom/classroom-main.html
+++ b/classroom/templates/classroom/classroom-main.html
@@ -2,6 +2,7 @@
 {% block content %}
 <div class='page-title'>
     <h1>{{ classroom.school_year }} {{ classroom.title }}</h1>
+    <a href ="{% url 'classroom-join-class' classroom.pk %}">Join class</a>
     <p>join code: {{ classroom.join_code }}</p>
 </div>
 <h1><a href="{% url 'classroom-classroom-profiles' classroom.title classroom.pk %}">Meet the team</a></h1>
