--- a/main/static/main/main.css
+++ b/main/static/main/main.css
@@ -22,6 +22,7 @@ body{
 }
 
 /*~~~~~login and register forms~~~~~*/
+/*
 .login-register-container1{
   display:flex;
   flex-direction:column;
@@ -44,7 +45,6 @@ body{
   width: 600px;
 }
 
-/*
 .login-register-card-body{
   
 }
@@ -53,10 +53,12 @@ body{
 /*~~~~~alerts~~~~~*/
 .alert{
   text-align:center;
-  width:600px;
+  /*width:600px;*/
 }
 
 /*~~~~~profile form~~~~~*/
+/*
 .profile-card{
   width: 600px;
 }
+*/
