--- a/main/templates/main/main-base.html
+++ b/main/templates/main/main-base.html
@@ -61,6 +61,13 @@
         </div>
     </nav>
     <div class='page-content'>
+        {% if messages %}
+            {% for message in messages %}
+                <div class='alert alert-{{ message.tags }}'>
+                    {{ message }}
+                </div>
+            {% endfor %}
+        {% endif %}
         {% block content %}
         {% endblock %}
     </div>
