updated views, urls, and templates to create funnel for creating new projects

--- a/users/templates/users/users-edit-project-add-link.html
+++ b/users/templates/users/users-edit-project-add-link.html
@@ -1,7 +1,7 @@
 {% extends 'main/main-base.html' %}
 {% load crispy_forms_tags %}
 {% block content %}
-<h1>{{ project.title }} - {{ project.user }}</h1>
+<h1>{{ project.title }}</h1>
 <div class="card project-card">
     <div class="card-body project-card-body">
         <form method="POST" enctype='multipart/form-data'>
