--- a/users/templates/users/users-my-projects.html
+++ b/users/templates/users/users-my-projects.html
@@ -10,5 +10,5 @@
         <br>
     {% endfor %}    
 </div>
-<a href='{% url "users-create-project" %}'>Create new project</a>
+<a href='{% url "users-create-project-step-1" %}'>Create new project</a>
 {% endblock content %}
