--- a/users/templates/users/users-create-project-step-1-add-text.html
+++ b/users/templates/users/users-create-project-step-1-add-text.html
@@ -3,10 +3,10 @@
 {% block content %}
 <div class="card project-card">
     <div class="card-body project-card-body">
-        <form method="POST" enctype='multipart/form-data'>
+        <form method="POST">
             {% csrf_token %}
             <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Add project photo</legend>
+                <legend class="border-bottom mb-4">Create Project | <b>Step 1: Add project text</b></legend>
                 {{ form|crispy }}
             </fieldset>
             <br>
