--- a/users/templates/users/users-edit-project-add-photo.html
+++ b/users/templates/users/users-edit-project-add-photo.html
@@ -1,13 +1,13 @@
 {% extends 'main/main-base.html' %}
 {% load crispy_forms_tags %}
 {% block content %}
-<h1>{{ project.title }} - {{ project.user }}</h1>
+<h1>{{ project.title }}</h1>
 <div class="card project-card">
     <div class="card-body project-card-body">
         <form method="POST" enctype='multipart/form-data'>
             {% csrf_token %}
             <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Add project video</legend>
+                <legend class="border-bottom mb-4">Add project photo</legend>
                 {{ form|crispy }}
             </fieldset>
             <br>
