--- a/users/templates/users/users-edit-project-add-video.html
+++ b/users/templates/users/users-edit-project-add-video.html
@@ -1,12 +1,13 @@
 {% extends 'main/main-base.html' %}
 {% load crispy_forms_tags %}
 {% block content %}
+<h1>{{ project.title }}</h1>
 <div class="card project-card">
     <div class="card-body project-card-body">
-        <form method="POST">
+        <form method="POST" enctype='multipart/form-data'>
             {% csrf_token %}
             <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Create Project</legend>
+                <legend class="border-bottom mb-4">Add project video</legend>
                 {{ form|crispy }}
             </fieldset>
             <br>
