updated templates for create project templates

--- a/users/templates/users/users-create-project-step-1-add-text.html
+++ b/users/templates/users/users-create-project-step-1-add-text.html
@@ -6,7 +6,7 @@
         <form method="POST">
             {% csrf_token %}
             <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Create Project | <b>Step 1: Add project text</b></legend>
+                <legend class="border-bottom mb-4">Create project | <b>Step 1: Add project text</b></legend>
                 {{ form|crispy }}
             </fieldset>
             <br>
