--- a/users/templates/users/users-create-project-step-4-add-photo.html
+++ b/users/templates/users/users-create-project-step-4-add-photo.html
@@ -7,7 +7,7 @@
         <form method="POST" enctype='multipart/form-data'>
             {% csrf_token %}
             <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Create Project | <b>Step 4: Add project photo</b></legend>
+                <legend class="border-bottom mb-4">Create project | <b>Step 4: Add project photo</b></legend>
                 {{ form|crispy }}
             </fieldset>
             <br>
