--- a/users/templates/users/users-create-project-step-2-add-link.html
+++ b/users/templates/users/users-create-project-step-2-add-link.html
@@ -1,7 +1,7 @@
 {% extends 'main/main-base.html' %}
 {% load crispy_forms_tags %}
 {% block content %}
-<h1>{{ project.title }}</h1>
+<h1>{{ temp_project.title }}</h1>
 <div class="card project-card">
     <div class="card-body project-card-body">
         <form method="POST" enctype='multipart/form-data'>
@@ -12,7 +12,7 @@
             </fieldset>
             <br>
             <div class='form-group'>
-                <a class="btn btn-outline-dark" href="{% url 'users-create-project-step-3' project.pk %}">Skip</a>
+                <a class="btn btn-outline-dark" href="{% url 'users-create-project-step-3' temp_project.pk %}">Skip</a>
                 <button class="btn btn-outline-success" type='submit'>Save</button>
             </div>
         </form>
