updated html on buttons

--- a/users/templates/users/users-create-project-step-1-add-text.html
+++ b/users/templates/users/users-create-project-step-1-add-text.html
@@ -11,7 +11,7 @@
             </fieldset>
             <br>
             <div class='form-group'>
-                <button class="btn btn-outline-success" type='submit'>Save</button>
+                <button class="btn btn-outline-success" type='submit'>SAVE text and go to step 2</button>
             </div>
         </form>
     </div>
