--- a/users/templates/users/users-create-project-step-2-add-link.html
+++ b/users/templates/users/users-create-project-step-2-add-link.html
@@ -12,8 +12,8 @@
             </fieldset>
             <br>
             <div class='form-group'>
-                <a class="btn btn-outline-dark" href="{% url 'users-create-project-step-3' temp_project.pk %}">Skip</a>
-                <button class="btn btn-outline-success" type='submit'>Save</button>
+                <a class="btn btn-outline-dark" href="{% url 'users-create-project-step-3' temp_project.pk %}">SKIP link and go to step 3</a>
+                <button class="btn btn-outline-success" type='submit'>SAVE link and go to step 3</button>
             </div>
         </form>
     </div>
