--- a/users/templates/users/users-create-project-step-3-add-video.html
+++ b/users/templates/users/users-create-project-step-3-add-video.html
@@ -12,8 +12,8 @@
             </fieldset>
             <br>
             <div class='form-group'>
-                <a class="btn btn-outline-dark" href="{% url 'users-create-project-step-4' temp_project.pk %}">Skip</a>
-                <button class="btn btn-outline-success" type='submit'>Save</button>
+                <a class="btn btn-outline-dark" href="{% url 'users-create-project-step-4' temp_project.pk %}">SKIP video and go to step 4</a>
+                <button class="btn btn-outline-success" type='submit'>SAVE video and go to step 4</button>
             </div>
         </form>
     </div>
