--- a/users/templates/users/users-create-project-step-4-add-photo.html
+++ b/users/templates/users/users-create-project-step-4-add-photo.html
@@ -12,8 +12,8 @@
             </fieldset>
             <br>
             <div class='form-group'>
-                <a class="btn btn-outline-dark" href="{% url 'users-create-project-step-5' temp_project.pk %}">SKIP photo and create new project</a>
-                <button class="btn btn-outline-success" type='submit'>SAVE photo and create new project</button>
+                <a class="btn btn-outline-dark" href="{% url 'users-create-project-step-5' temp_project.pk %}">SKIP photo and finish</a>
+                <button class="btn btn-outline-success" type='submit'>SAVE photo and finish</button>
             </div>
         </form>
     </div>
